Ajustes na documentação Swagger
