# docs/swagger.json
@@ -78,7 +78,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.request"
+                            "$ref": "#/definitions/domain.Request"
                         }
                     }
                 ],
@@ -137,7 +137,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.request"
+                            "$ref": "#/definitions/domain.Request"
                         }
                     },
                     {
@@ -244,7 +244,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.request"
+                            "$ref": "#/definitions/domain.RequestUpdateNameAndPrice"
                         }
                     },
                     {
@@ -285,7 +285,7 @@
         }
     },
     "definitions": {
-        "handler.request": {
+        "domain.Request": {
             "type": "object",
             "properties": {
                 "code": {
@@ -297,9 +297,6 @@
                 "count": {
                     "type": "integer"
                 },
-                "date": {
-                    "type": "string"
-                },
                 "name": {
                     "type": "string"
                 },
@@ -308,6 +305,17 @@
                 },
                 "published": {
                     "type": "boolean"
+                }
+            }
+        },
+        "domain.RequestUpdateNameAndPrice": {
+            "type": "object",
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
                 }
             }
         },
